<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right"
        android:orientation="horizontal" >

        <com.centerm.autofill.appframework.view.CTTextView
            style="@style/TextViewStyle"
            android:layout_width="200dp"
            android:text="@string/ransaction" />

        <RadioGroup
            android:id="@+id/RG_Ransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RB_SelfTransaction"
                style="@style/RBFixedHMRStyle1"
                android:checked="true"
                android:text="@string/selfTransaction" />

            <RadioButton
                android:id="@+id/RB_ProxyTransaction"
                style="@style/RBFixedHMRStyle1"
                android:text="@string/proxyTransaction" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LAYOUT_AgentPhone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:visibility="gone" >

        <com.centerm.autofill.appframework.view.CTTextView
            style="@style/TextViewStyle"
            android:layout_width="200dp"
            android:text="*代理人电话：" />

        <EditText
            android:id="@+id/EDIT_AgentMobile"
            style="@style/PhoneEditTextStyle"
            android:layout_width="250dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>